[project]
name = "roughcountries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "plotnine>=0.14.4",
    "tabulate>=0.9.0",
]
